--- a/vams/templates/aretes.html
+++ b/vams/templates/aretes.html
@@ -82,9 +82,15 @@
         <p>Precio: $30.99</p>
         <button>Comprar</button>
       </div>
-    
+    </div>
+  </div>
+    </section>
 
-
+    <footer class="mt-5 p-3" style="background-color: rgba(187, 141, 214, 0.685);">
+        <div style="display: flex; justify-content: center;">
+        <p >&copy; 2024 Mi sitio web. Todos los derechos reservados.</p >
+      </div>
+    </footer>
 
 
   </body>
