--- a/vams/templates/servicios.html
+++ b/vams/templates/servicios.html
@@ -57,60 +57,10 @@
       </a>
 
       <footer class="mt-5 p-3" style="background-color: rgba(187, 141, 214, 0.685);">
-        <div class="container-fluid">
-          <div class="row">
-            <div class="row align-items-start">
-              <div class="container col-12 col-lg-6 col-md-4">
-                <img style="margin-top: 0; margin-left: -90px;" src="{% static 'assets/img/logo-vams.png' %}" alt="Vams logo"
-                  width="300px" height="300px">
-                <h2 class="d-md-flex logo-name" style="color: rgb(0, 0, 0);">
-                  Vams
-                </h2>
-                <h2 class="logo-name d-md-flex" style="color: rgb(0, 0, 0); margin-top: 60px;">
-                  Accesorios
-                </h2>
-              </div>
-    
-              <div aling-start="center" class="col-12 col-lg-6 col-md-4" style="text-align:center;">
-                <h4>Contactanos</h4>
-    
-                <a style="color: black;" target="blank"
-                  href="https://www.instagram.com/vams.accesorios?igsh=dXBibnJ2cTBpdzJw">
-                  <i style="font-size: 30px; margin-right: 10px;" class="bi bi-instagram"></i></a>
-    
-                <a style="color: black;" target="blank" href="..."><i style="font-size: 30px; margin-right: 10px;"
-                    class="bi bi-telephone-outbound-fill"></i></a>
-    
-                <a style="color: black;" target="blank" href="..."> <i style="font-size: 30px; margin-right: 10px;"
-                    class="bi bi-envelope-heart"></i></a>
-    
-    
-                <hr>
-    
-                <div class="row">
-                  <div class="col-12 col-lg-6 col-md-4" style="text-align: left;">
-                    <h4>Garantías</h4>
-                    <ul>
-                      <li href="#">Garantía de satisfacción</li>
-                      <li href="#">Garantía de devolución de dinero</li>
-                      <li href="#">Garantía de envío rápido</li>
-                    </ul>
-                  </div>
-                  <div class="col-12 col-lg-6 col-md-4" style="text-align: left;">
-                    <h4>Nosotros</h4>
-                    <ul>
-                      <li href="#">Acerca de nosotros</li>
-                      <li href="#">Contáctenos</li>
-                      <li href="#">Blog</li><br>
-                    </ul>
-                  </div>
-                </div>
-                <p class="copyright">&copy; 2024 Mi sitio web. Todos los derechos reservados.</p>
-              </div>
-            </div>
-          </div>
-        </div>
-      </footer>
+        <div style="display: flex; justify-content: center;">
+        <p >&copy; 2024 Mi sitio web. Todos los derechos reservados.</p >
+      </div>
+</footer>
     </body>
     
 </html>
