--- a/vams/templates/sobrenosotros.html
+++ b/vams/templates/sobrenosotros.html
@@ -70,10 +70,10 @@
 
         
         <footer class="mt-5 p-3" style="background-color: rgba(187, 141, 214, 0.685);">
-                  <div>
+                  <div style="display: flex; justify-content: center;">
                   <p >&copy; 2024 Mi sitio web. Todos los derechos reservados.</p >
                 </div>
-           
+        </footer>
       </body>
       
 </html>
