--- a/vams/templates/collares.html
+++ b/vams/templates/collares.html
@@ -82,7 +82,16 @@
         <p>Precio: $30.99</p>
         <button>Comprar</button>
       </div>
-  
+    </div>
+  </section>
+
+     
+    <footer class="mt-5 p-3" style="background-color: rgba(187, 141, 214, 0.685);">
+        <div style="display: flex; justify-content: center;">
+        <p >&copy; 2024 Mi sitio web. Todos los derechos reservados.</p >
+      </div>
+  </footer>
+
    
 </body>
 
