--- a/vams/templates/index.html
+++ b/vams/templates/index.html
@@ -32,14 +32,16 @@
           <li class="nav-item">
             <a class="nav-link active" aria-current="page" href="/">Inicio</a>
           </li>
-
+          <li class="nav-item">
+            <a class="nav-link active" aria-current="page" href="/inicioSesion.html/">Iniciar Sesion</a>
+          </li>
           <li class="nav-item dropdown">
             <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
               Catalogo
             </a>
             <ul class="dropdown-menu">
               <li><a class="dropdown-item" href="Aretes.html">Aretes</a></li>
-               <li><a class="dropdown-item" href="Collares.html">Collares</a></li>
+              <li><a class="dropdown-item" href="Collares.html">Collares</a></li>
             </ul>
           </li>
           <li class="nav-item">
@@ -49,6 +51,7 @@
             <a class="nav-link active" aria-current="page" href="SobreNosotros.html">Sobre Nosotros</a>
           </li>
         </ul>
+
         <form class="d-flex" role="search">
           <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
           <button class="btn btn-outline-success" type="submit">Search</button>
