--- a/vams/templates/InicioSesion.html
+++ b/vams/templates/InicioSesion.html
@@ -52,11 +52,44 @@
           </div>
         </nav>
 
-        <a target="_blank"
-        style="background: pink; position:fixed; bottom: 20px ; right: 20px; z-index: 5; border: solid 2px white; border-radius: 50%;"
-        href="https://wa.me/+573132529283" class="btn btn-primary">
-        <i class="bi bi-whatsapp"></i>
-      </a>
+        <main class="container">
+    <div class="row">
+        <section class="col-md-4 offset-md-4 mt-5">
+            <form action="/inicioSesion.html/" method="POST" class="card card-body">
+                <h1 class="text-center">Ingresar</h1>
+                    {{error}}
+                    {% csrf_token %}
+                    <div class="mb-3">
+                      <label for="username">Usuario:</label>
+                      <input
+                        type="text"
+                        name="username"
+                        id="username"
+                        class="form-control"
+                        placeholder="Escriba su usuario"
+                        required
+                      />
+                    </div>
+                    <div class="mb-3">
+                      <label for="password">Contraseña:</label>
+                      <input
+                        type="password"
+                        name="password"
+                        id="id_password"
+                        class="form-control"
+                        placeholder="Contraseña"
+                        required
+                      />          
+                    </div>
+                <button class="btn btn-primary">
+                    Ingresar
+                </button>
+            </form>
+        </section>
+    </div>
+
+
+</main>
 
       <footer class="mt-5 p-3" style="background-color: rgba(187, 141, 214, 0.685);">
         <div style="display: flex; justify-content: center;">
@@ -69,3 +102,5 @@
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
   integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
   <script src="{% static 'assets/js/swiper.js' %}"></script>
+
+
