--- a/vams/templates/collares.html
+++ b/vams/templates/collares.html
@@ -28,7 +28,7 @@
                 <a class="nav-link active" aria-current="page" href="/">Inicio</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="">Iniciar Sesion</a>
+                <a class="nav-link active" aria-current="page" href="/inicioSesion.html/">Iniciar Sesion</a>
               </li>
               <li class="nav-item dropdown">
                 <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
