--- a/vams/templates/sobrenosotros.html
+++ b/vams/templates/sobrenosotros.html
@@ -29,7 +29,7 @@
                   <a class="nav-link active" aria-current="page" href="/">Inicio</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link active" aria-current="page" href="InicioSesion.html">Iniciar Sesion</a>
+                  <a class="nav-link active" aria-current="page" href="/inicioSesion.html/">Iniciar Sesion</a>
                 </li>
                 <li class="nav-item dropdown">
                   <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
