--- a/vams/templates/servicios.html
+++ b/vams/templates/servicios.html
@@ -14,7 +14,7 @@
         <nav class="navbar navbar-expand-lg bg-body-tertiary">
           <div class="container-fluid">
             <a class="navbar-brand" href="#">
-              <img src="{% static '/assets/img/logo-vams.png' %}" alt="VAMS LOGO" width="80px" height="52px">
+              <img src="{% static '/assets/img/logo-vams.png' %}" alt="VAMS LOGO" width="80px" height="60px">
             </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
               aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -97,7 +97,7 @@
         </div>
         <div class="servicio">
             <h2>Personalización</h2>
-            <img src="https://siemprehayalgoqueponerse.com/wp-contenido/uploads/2020/10/asesoras-de-imagen-personal-vigo-personal-shopper-siempre-hay-algo-que-ponerse-servicios-edited.jpg" class="card-img-top" alt="..."><br>
+            <img src="https://siemprehayalgoqueponerse.com/wp-contenido/uploads/2020/10/asesoras-de-imagen-personal-vigo-personal-shopper-siempre-hay-algo-que-ponerse-servicios-edited.jpg" class="card-img-top" alt="..." height="315px"><br>
             <br><p style= "text-align: justify">
               Permitir a las clientas personalizar algunos productos, como collares o pulseras, eligiendo colores, materiales o añadiendo iniciales.</p>
         </div>
