--- a/static/assets/css/nosotros.css
+++ b/static/assets/css/nosotros.css
@@ -1,6 +1,5 @@
 
 
-
 .container {
     display: flex;
     justify-content: center;
@@ -72,11 +71,23 @@
     box-shadow: 0px 2px 5px rgba(0, 0, 0, 0.1);
 }
 
-.footer {
-    background-color: #eee;
-    padding: 20px;
-    text-align: center;
-    position: fixed;
-    bottom: 0;
-    width: 100%;
+
+.texto-transparente {
+background: rgba(246, 182, 223, 0.7); 
+border-radius: 10px; 
+padding: 30px; 
+max-width: 900px;
+height:0 ; 
+margin: auto; 
+box-shadow: 0 4px 20px rgba(185, 132, 209, 0.5); 
+text-align: center; 
 }
+
+h1 {
+margin-bottom: 20px; 
+}
+
+p {
+line-height: 1.6; 
+}
+    
