--- a/vams/templates/index.html
+++ b/vams/templates/index.html
@@ -21,7 +21,7 @@
   <nav class="navbar navbar-expand-lg bg-body-tertiary">
     <div class="container-fluid">
       <a class="navbar-brand" href="#">
-        <img src="{% static 'assets/img/logo-vams.png' %}" alt="VAMS LOGO" width="80px" height="52px">
+        <img src="{% static 'assets/img/logo-vams.png' %}" alt="VAMS LOGO" width="80px" height="60px">
       </a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
         aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -77,24 +77,24 @@
     </div>
     <div class="carousel-inner">
       <div class="carousel-item active">
-        <img src="{% static 'assets/img/nav.jpeg' %}" width="100px " height="600px" class="d-block w-100" alt="...">
+        <img src="{% static 'assets/img/nav.png' %}" width="100px " height="650px" class="d-block w-100" alt="...">
         <div class="carousel-caption d-none d-md-block" style="color: black;">
-          <h5>AHORA NUEVAS PROMOCIONES</h5>
-          <p>..</p>
+          <h5 style="text-align: center; font-size: 30px; font-weight: bold; color: 0f0f0f; margin-bottom: 20px;"> </h5>
+          <p></p>
         </div>
       </div>
       <div class="carousel-item">
-        <img src="{% static 'assets/img/nav2.jpeg' %}" width="100px" height="600px" class="d-block w-100" alt="...">
+        <img src="{% static 'assets/img/nav03.png' %}" width="100px" height="650px" class="d-block w-100" alt="...">
         <div class="carousel-caption d-none d-md-block">
           <h5></h5>
-          <p>...</p>
+          <p></p>
         </div>
       </div>
       <div class="carousel-item">
-        <img src="{% static 'assets/img/nav3.jpeg' %}" width="100px" height="600px" class="d-block w-100" alt="...">
+        <img src="{% static 'assets/img/nav02.png' %}" width="100px" height="650px" class="d-block w-100" alt="...">
         <div class="carousel-caption d-none d-md-block" style="color: black;">
-          <h5>Tu sitio de confianza</h5>
-          <p>..</p>
+          <h5 style="text-align: center; font-size: 30px; font-weight: bold; color: 0f0f0f5; margin-bottom: 20px;"> </h5>
+          <p></p>
         </div>
       </div>
     </div>
@@ -106,9 +106,14 @@
       <span class="carousel-control-next-icon" aria-hidden="true"></span>
       <span class="visually-hidden">Next</span>
     </button>
+  </div><br>
+ 
+ 
+ <div> 
+    <h2 style="text-align: center; font-size: 30px; font-weight: bold; color: #866195; padding: 50px 0 0 0;"> Nuestros Accesorios</h2>
   </div>
 
-  <!-- Cards -->
+
   <section>
     <div class="swiper">
       <div class="swiper-wrapper">
@@ -175,99 +180,74 @@
   <div class="container text-center">
     <div class="row align-items-start">
       <div class="col">
-        <h2>Contact Form</h2>
+        <h2 style="text-align: center; font-size: 30px; font-weight: bold; color: #866195; margin-bottom: 20px;">Contacto</h2>
         <form id="contactForm">
-          <label for="name">Nombre:</label><br>
+          <label for="name">Nombre:</label>
           <input type="text" id="name" name="name" required><br>
-          <label for="email">Email:</label><br>
+          <br><label for="email">Email:</label>
           <input type="email" id="email" name="email" required><br>
-          <label for="message">Mensaje:</label><br>
-          <textarea id="message" name="message" required></textarea><br>
+          <br><label for="message">Mensaje:</label>
+          <textarea id="message" name="message" required></textarea>
           <input type="submit" value="Enviar">
         </form>
       </div>
       </div><hr>
 
       <div class="col">
-        <div class="card" style="width: 18rem; margin-left: 140px;">
+        <div class="card" style="width: 18rem; margin-left: 170px;">
           <div class="card-body">
-            <h5 class="card-title">Mision</h5>
-            <p class="card-text" >Ofrecer joyas exclusivas y de calidad, inspirando confianza y empoderando la expresión individual de nuestras clientas a través de una experiencia de compra en línea excepcional y promoviendo elegancia.</p>
+            <h5 class="card-title" style="text-align: center; font-size: 30px; font-weight: bold; color: #866195; margin-bottom: 20px;">Mision</h5>
+            <p class="card-text" style= "text-align: justify">Ofrecer joyas exclusivas, a buen precio y de alta calidad, inspirando confianza y empoderando la expresión individual de nuestras clientas a través de una experiencia de compra en línea excepcional y promoviendo elegancia.</p>
           </div>
         </div>
       </div>
 
       <div class="col">
-        <div class="card" style="width: 18rem; margin-left: 50px;">
+        <div class="card" style="width: 18rem; margin-left: 150px;">
           <div class="card-body">
-            <h5 class="card-title">Vision</h5>
-            <p class="card-text" >Convertirnos en el destino líder para la compra de joyas en línea, reconocidos por nuestra calidad y servicio al cliente excepcional, mientras expandimos nuestro impacto en la industria de la moda, medio ambiente y la comunidad.</p>
+            <h5 class="card-title" style="text-align: center; font-size: 30px; font-weight: bold; color: #866195; margin-bottom: 20px;">Vision</h5>
+            <p class="card-text" style= "text-align: justify" >Convertirnos en el destino líder para la compra de joyas en línea, reconocidos por nuestra calidad y servicio al cliente excepcional, mientras expandimos nuestro impacto en la industria de la moda, medio ambiente y la comunidad.</p>
           </div>
         </div>
       </div>
     </div>
+  </div><br>
+
+
+
+<br><footer style="background-color: #d1a8f1; padding: 20px; display: flex; flex-direction: column; align-items: center;">
+  <div style="display: flex; justify-content: space-between; width: 100%; max-width: 1320px;">
+      <div style="display: flex; align-items: center;">
+          <img src="{% static 'assets/img/logo-vams.png' %}" alt="Logo" style="width: 230px; height: 200PX; margin-right: 10px;">
+          <p style="font-style: serif; margin: 0;">Diseñados Pensando en Ti</p>
+      </div>
+
+      <div aling-start="center" class="col-12 col-lg-6 col-md-4" style="text-align:center;">
+        <h5 style="text-align: center; font-size: 30px; font-weight: bold; color: #040404; margin-bottom: 20px;">Contactanos</h5>
+
+        <a style="color: black;" target="blank"
+          href="https://www.instagram.com/vams.accesorios?igsh=dXBibnJ2cTBpdzJw">
+          <i style="font-size: 30px; margin-right: 10px;" class="bi bi-instagram"></i></a>
+
+        <a style="color: black;" target="blank" href="..."><i style="font-size: 30px; margin-right: 10px;"
+            class="bi bi-telephone-outbound-fill"></i></a>
+
+        <a style="color: black;" target="blank" href="..."> <i style="font-size: 30px; margin-right: 10px;"
+            class="bi bi-envelope-heart">
+        <hr>
+      </i></a>
+
+  <div style="text-align: center;">
+      <p>&copy;  2024 Mi sitio web. Todos los derechos reservados.</p>
   </div>
+</footer>
 
 
 
-  <footer class="mt-5 p-3" style="background-color: rgba(187, 141, 214, 0.685);">
-    <div class="container-fluid">
-      <div class="row">
-        <div class="row align-items-start">
-          <div class="container col-12 col-lg-6 col-md-4"> 
-            <img style="margin-top: 0; margin-left: -90px;" src= "{% static 'assets/img/logo-vams.png' %}"  alt="Vams logo"
-              width="300px" height="300px">
-            <h2 class="d-md-flex logo-name" style="color: rgb(0, 0, 0);">
-              Vams
-            </h2>
-            <h2 class="logo-name d-md-flex" style="color: rgb(0, 0, 0); margin-top: 60px;">
-              Accesorios
-            </h2>
-          </div>
-
-          <div aling-start="center" class="col-12 col-lg-6 col-md-4" style="text-align:center;">
-            <h4>Contactanos</h4>
-
-            <a style="color: black;" target="blank"
-              href="https://www.instagram.com/vams.accesorios?igsh=dXBibnJ2cTBpdzJw">
-              <i style="font-size: 30px; margin-right: 10px;" class="bi bi-instagram"></i></a>
-
-            <a style="color: black;" target="blank" href="..."><i style="font-size: 30px; margin-right: 10px;"
-                class="bi bi-telephone-outbound-fill"></i></a>
-
-            <a style="color: black;" target="blank" href="..."> <i style="font-size: 30px; margin-right: 10px;"
-                class="bi bi-envelope-heart"></i></a>
 
 
-            <hr>
 
-            <div class="row">
-              <div class="col-12 col-lg-6 col-md-4" style="text-align: left;">
-                <h4>Garantías</h4>
-                <ul>
-                  <li href="#">Garantía de satisfacción</li>
-                  <li href="#">Garantía de devolución de dinero</li>
-                  <li href="#">Garantía de envío rápido</li>
-                </ul>
-              </div>
-              <div class="col-12 col-lg-6 col-md-4" style="text-align: left;">
-                <h4>Nosotros</h4>
-                <ul>
-                  <li href="#">Acerca de nosotros</li>
-                  <li href="#">Contáctenos</li>
-                  <li href="#">Blog</li><br>
-                </ul>
-              </div>
-            </div>
-            <p class="copyright">&copy; 2024 Mi sitio web. Todos los derechos reservados.</p>
-          </div>
-        </div>
-      </div>
-    </div>
-  </footer>
 </body>
-
-
 
 </html>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
