--- a/vams/templates/sobrenosotros.html
+++ b/vams/templates/sobrenosotros.html
@@ -17,7 +17,7 @@
         <nav class="navbar navbar-expand-lg bg-body-tertiary">
           <div class="container-fluid">
             <a class="navbar-brand" href="#">
-              <img src="{% static 'assets/img/logo-vams.png' %}" alt="VAMS LOGO" width="80px" height="52px">
+              <img src="{% static 'assets/img/logo-vams.png' %}" alt="VAMS LOGO" width="80px" height="60px">
             </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
               aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -55,6 +55,8 @@
           </div>
         </nav>
 
+
+
         <a target="_blank"
         style="background: pink; position:fixed; bottom: 20px ; right: 20px; z-index: 5; border: solid 2px white; border-radius: 50%;"
         href="https://wa.me/+573132529283" class="btn btn-primary">
@@ -69,7 +71,16 @@
         <img src="https://roibas.com/img/cabecera-sobre-nosotros.jpg" class="card-img-bottom" alt="...">
       </div>
          
+      <div class="texto-transparente">
+        <h1>Título Atractivo</h1>
+        <p> Bienvenidos a Vams, un espacio dedicado a la belleza y la elegancia femenina a través de piezas únicas y atemporales. Creemos que cada mujer, sin importar su edad, merece adornos que resalten su individualidad y estilo personal.
 
+          Nuestra pasión por la joyería se refleja en cada uno de nuestros diseños, elaborados a mano con amor y dedicación. Utilizamos materiales de alta calidad para crear accesorios que no solo son hermosos, sino también duraderos. Desde delicados collares hasta pulseras llamativas, cada pieza cuenta una historia y está hecha pensando en ti.
+          
+          En Vams, nos enorgullecemos de ofrecer una variedad de estilos que se adaptan a todos los gustos y ocasiones. Ya sea para un evento especial, un regalo significativo o simplemente para consentirte, aquí encontrarás el complemento perfecto.
+          
+          </p>
+      </div>
         
         <footer class="mt-5 p-3" style="background-color: rgba(187, 141, 214, 0.685);">
                   <div style="display: flex; justify-content: center;">
