se agrego productos

--- a/vams/templates/aretes.html
+++ b/vams/templates/aretes.html
@@ -62,10 +62,56 @@
 
   <header>
     <h2 style="text-align: center; font-size: 30px; font-weight: bold; color: #866195; margin-bottom: 20px;">Catalogo Aretes</h2>
-  </header>
+  </header><br>
 <main>
   <section class="productos">
-    <div class="grid" style="margin-left: 46px;">
+    <div class="grid" style="margin-left: 139px;">
+      <div class="producto">
+        <img src="{% static '/assets/img/aretes.jpeg' %}"  alt="Producto 1">
+        <h3>Aretes</h3>
+        <p>Precio: $10.99</p>
+        <button>Comprar</button>
+      </div>
+      <div class="producto">
+        <img src="{% static '/assets/img/aretes.jpeg' %}" alt="Producto 2">
+        <h3>Aretes</h3>
+        <p>Precio: $20.99</p>
+        <button>Comprar</button>
+      </div>
+      <div class="producto">
+        <img src="{% static '/assets/img/aretes.jpeg' %}"  alt="Producto 3">
+        <h3>Aretes</h3>
+        <p>Precio: $30.99</p>
+        <button>Comprar</button>
+       </div>
+   </div>
+  </section><br>
+
+    <br><section class="productos">
+      <div class="grid" style="margin-left: 139px;">
+        <div class="producto">
+          <img src="{% static '/assets/img/aretes.jpeg' %}"  alt="Producto 1">
+          <h3>Aretes</h3>
+          <p>Precio: $10.99</p>
+          <button>Comprar</button>
+        </div>
+        <div class="producto">
+          <img src="{% static '/assets/img/aretes.jpeg' %}" alt="Producto 2">
+          <h3>Aretes</h3>
+          <p>Precio: $20.99</p>
+          <button>Comprar</button>
+        </div>
+        <div class="producto">
+          <img src="{% static '/assets/img/aretes.jpeg' %}"  alt="Producto 3">
+          <h3>Aretes</h3>
+          <p>Precio: $30.99</p>
+          <button>Comprar</button>
+        </div>
+     </div>
+  </section><br>
+
+  <br><section class="productos">
+    <div class="grid" style="margin-left: 139px;">
       <div class="producto">
         <img src="{% static '/assets/img/aretes.jpeg' %}"  alt="Producto 1">
         <h3>Aretes</h3>
@@ -84,9 +130,57 @@
         <p>Precio: $30.99</p>
         <button>Comprar</button>
       </div>
+   </div>
+</section><br>
+
+
+<br><section class="productos">
+  <div class="grid" style="margin-left: 139px;">
+    <div class="producto">
+      <img src="{% static '/assets/img/aretes.jpeg' %}"  alt="Producto 1">
+      <h3>Aretes</h3>
+      <p>Precio: $10.99</p>
+      <button>Comprar</button>
     </div>
-  </div>
-    </section>
+    <div class="producto">
+      <img src="{% static '/assets/img/aretes.jpeg' %}" alt="Producto 2">
+      <h3>Aretes</h3>
+      <p>Precio: $20.99</p>
+      <button>Comprar</button>
+    </div>
+    <div class="producto">
+      <img src="{% static '/assets/img/aretes.jpeg' %}"  alt="Producto 3">
+      <h3>Aretes</h3>
+      <p>Precio: $30.99</p>
+      <button>Comprar</button>
+    </div>
+ </div>
+</section><br>
+
+
+<br><section class="productos">
+  <div class="grid" style="margin-left: 139px;">
+    <div class="producto">
+      <img src="{% static '/assets/img/aretes.jpeg' %}"  alt="Producto 1">
+      <h3>Aretes</h3>
+      <p>Precio: $10.99</p>
+      <button>Comprar</button>
+    </div>
+    <div class="producto">
+      <img src="{% static '/assets/img/aretes.jpeg' %}" alt="Producto 2">
+      <h3>Aretes</h3>
+      <p>Precio: $20.99</p>
+      <button>Comprar</button>
+    </div>
+    <div class="producto">
+      <img src="{% static '/assets/img/aretes.jpeg' %}"  alt="Producto 3">
+      <h3>Aretes</h3>
+      <p>Precio: $30.99</p>
+      <button>Comprar</button>
+    </div>
+ </div>
+</section><br>
+
 
     <footer class="mt-5 p-3" style="background-color: rgba(187, 141, 214, 0.685);">
         <div style="display: flex; justify-content: center;">
