--- a/vams/templates/collares.html
+++ b/vams/templates/collares.html
@@ -62,30 +62,123 @@
 
   <header>
     <h2 style="text-align: center; font-size: 30px; font-weight: bold; color: #866195; margin-bottom: 20px;">Catalogo Collares</h2>
-  </header>
+  </header><br>
+
 <main>
   <section class="productos">
-    <div class="grid" style="margin-left: 46px;">
+    <div class="grid" style="margin-left: 139px;">
       <div class="producto">
         <img src="{% static '/assets/img/collar.jpeg' %}"  alt="Producto 1">
-        <h3>Aretes</h3>
+        <h3>Collar</h3>
         <p>Precio: $10.99</p>
         <button>Comprar</button>
       </div>
       <div class="producto">
-        <img src= "{% static '/assets/img/collar.jpeg' %}" alt="Producto 2">
-        <h3>Aretes</h3>
+        <img src= "{% static '/assets/img/collar02.jpg' %}" alt="Producto 2">
+        <h3>Collar</h3>
+        <p>Precio: $20.99</p>
+        <button>Comprar</button>
+      </div>
+      <div class="producto">
+        <img src= "{% static '/assets/img/collar03.jpg' %}" alt="Producto 3">
+        <h3>Collar</h3>
+        <p>Precio: $30.99</p>
+        <button>Comprar</button>
+      </div>
+    </div>
+  </section><br>
+
+  <br><section class="productos">
+    <div class="grid" style="margin-left: 139px;">
+      <div class="producto">
+        <img src="{% static '/assets/img/collar04.jpg' %}"  alt="Producto 1">
+        <h3>Collar</h3>
+        <p>Precio: $10.99</p>
+        <button>Comprar</button>
+      </div>
+      <div class="producto">
+        <img src= "{% static '/assets/img/collar05.jpg' %}" alt="Producto 2">
+        <h3>Collar</h3>
+        <p>Precio: $20.99</p>
+        <button>Comprar</button>
+      </div>
+      <div class="producto">
+        <img src= "{% static '/assets/img/collar06.jpg' %}" alt="Producto 3">
+        <h3>Collar</h3>
+        <p>Precio: $30.99</p>
+        <button>Comprar</button>
+      </div>
+    </div>
+  </section><br>
+
+  <br><section class="productos">
+    <div class="grid" style="margin-left: 139px;">
+      <div class="producto">
+        <img src="{% static '/assets/img/collar07.jpg' %}"  alt="Producto 1">
+        <h3>Collar</h3>
+        <p>Precio: $10.99</p>
+        <button>Comprar</button>
+      </div>
+      <div class="producto">
+        <img src= "{% static '/assets/img/collar08.jpg' %}" alt="Producto 2">
+        <h3>Collar</h3>
         <p>Precio: $20.99</p>
         <button>Comprar</button>
       </div>
       <div class="producto">
         <img src= "{% static '/assets/img/collar.jpeg' %}" alt="Producto 3">
-        <h3>Aretes</h3>
+        <h3>Collar</h3>
         <p>Precio: $30.99</p>
         <button>Comprar</button>
       </div>
     </div>
-  </section>
+  </section><br>
+
+  <br><section class="productos">
+    <div class="grid" style="margin-left: 139px;">
+      <div class="producto">
+        <img src="{% static '/assets/img/collar.jpeg' %}"  alt="Producto 1">
+        <h3>Collar</h3>
+        <p>Precio: $10.99</p>
+        <button>Comprar</button>
+      </div>
+      <div class="producto">
+        <img src= "{% static '/assets/img/collar.jpeg' %}" alt="Producto 2">
+        <h3>Collar</h3>
+        <p>Precio: $20.99</p>
+        <button>Comprar</button>
+      </div>
+      <div class="producto">
+        <img src= "{% static '/assets/img/collar.jpeg' %}" alt="Producto 3">
+        <h3>Collar</h3>
+        <p>Precio: $30.99</p>
+        <button>Comprar</button>
+      </div>
+    </div>
+  </section><br>
+
+  <br><section class="productos">
+    <div class="grid" style="margin-left: 139px;">
+      <div class="producto">
+        <img src="{% static '/assets/img/collar.jpeg' %}"  alt="Producto 1">
+        <h3>Collar</h3>
+        <p>Precio: $10.99</p>
+        <button>Comprar</button>
+      </div>
+      <div class="producto">
+        <img src= "{% static '/assets/img/collar.jpeg' %}" alt="Producto 2">
+        <h3>Collar</h3>
+        <p>Precio: $20.99</p>
+        <button>Comprar</button>
+      </div>
+      <div class="producto">
+        <img src= "{% static '/assets/img/collar.jpeg' %}" alt="Producto 3">
+        <h3>Collar</h3>
+        <p>Precio: $30.99</p>
+        <button>Comprar</button>
+      </div>
+    </div>
+  </section><br>
 
      
     <footer class="mt-5 p-3" style="background-color: rgba(187, 141, 214, 0.685);">
