--- a/vams/templates/index.html
+++ b/vams/templates/index.html
@@ -77,7 +77,7 @@
     </div>
     <div class="carousel-inner">
       <div class="carousel-item active">
-        <img src="{% static 'assets/img/nav.png' %}" width="100px " height="650px" class="d-block w-100" alt="...">
+        <img src="{% static 'assets/img/nav01.png' %}" width="100px " height="695px" class="d-block w-100" alt="...">
         <div class="carousel-caption d-none d-md-block" style="color: black;">
           <h5 style="text-align: center; font-size: 30px; font-weight: bold; color: 0f0f0f; margin-bottom: 20px;"> </h5>
           <p></p>
@@ -197,7 +197,7 @@
         <div class="card" style="width: 18rem; margin-left: 170px;">
           <div class="card-body">
             <h5 class="card-title" style="text-align: center; font-size: 30px; font-weight: bold; color: #866195; margin-bottom: 20px;">Mision</h5>
-            <p class="card-text" style= "text-align: justify">Ofrecer joyas exclusivas, a buen precio y de alta calidad, inspirando confianza y empoderando la expresión individual de nuestras clientas a través de una experiencia de compra en línea excepcional y promoviendo elegancia.</p>
+            <p class="card-text" >Ofrecer joyas exclusivas, a buen precio y de alta calidad, inspirando confianza y empoderando la expresión individual de nuestras clientas a través de una experiencia de compra en línea excepcional y promoviendo elegancia.</p>
           </div>
         </div>
       </div>
@@ -206,7 +206,7 @@
         <div class="card" style="width: 18rem; margin-left: 150px;">
           <div class="card-body">
             <h5 class="card-title" style="text-align: center; font-size: 30px; font-weight: bold; color: #866195; margin-bottom: 20px;">Vision</h5>
-            <p class="card-text" style= "text-align: justify" >Convertirnos en el destino líder para la compra de joyas en línea, reconocidos por nuestra calidad y servicio al cliente excepcional, mientras expandimos nuestro impacto en la industria de la moda, medio ambiente y la comunidad.</p>
+            <p class="card-text" >Convertirnos en el destino líder para la compra de joyas en línea, reconocidos por nuestra calidad y servicio al cliente excepcional, mientras expandimos nuestro impacto en la industria de la moda, medio ambiente y la comunidad.</p>
           </div>
         </div>
       </div>
