--- a/vams/templates/sobrenosotros.html
+++ b/vams/templates/sobrenosotros.html
@@ -71,8 +71,7 @@
         <img src="https://roibas.com/img/cabecera-sobre-nosotros.jpg" class="card-img-bottom" alt="...">
       </div>
          
-      <div class="texto-transparente">
-        <h1>Título Atractivo</h1>
+      <div class="texto-transparente" style= "text-align: justify">
         <p> Bienvenidos a Vams, un espacio dedicado a la belleza y la elegancia femenina a través de piezas únicas y atemporales. Creemos que cada mujer, sin importar su edad, merece adornos que resalten su individualidad y estilo personal.
 
           Nuestra pasión por la joyería se refleja en cada uno de nuestros diseños, elaborados a mano con amor y dedicación. Utilizamos materiales de alta calidad para crear accesorios que no solo son hermosos, sino también duraderos. Desde delicados collares hasta pulseras llamativas, cada pieza cuenta una historia y está hecha pensando en ti.
